--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header>header</app-header>
+<!-- <app-header>header</app-header> -->
 <router-outlet></router-outlet>
-<app-footer>footer</app-footer>
+<!-- <app-footer>footer</app-footer> -->
 
