--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; background: #d2d2d2 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-card-actions .mat-button, .mat-card-actions .mat-raised-button{
+    background: #01bceb;
+}
