--- a/src/app/stackd3-chart/stackd3-chart.component.html
+++ b/src/app/stackd3-chart/stackd3-chart.component.html
@@ -1,5 +1,2 @@
-<p>
-  stackd3-chart works!
-</p>
-<angular-d3-bar [id]="test2" [data]="barChartData" [dataColumns]="dataColumns" [colors]="colors" [yAxisTicks]=10 [width]=400
-[height]=200 [transitionDuration]=1000 [transitionDelay]=30 [barWidth]="'16px'"></angular-d3-bar>
+<angular-d3-bar  [data]="barChartData" [dataColumns]="dataColumns" [colors]="colors" [yAxisTicks]=10
+  [width]=400 [height]=200 [transitionDuration]=1000 [transitionDelay]=30 [barWidth]="'16px'"></angular-d3-bar>
