shared module structure remove

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- <app-header>header</app-header> -->
-<router-outlet></router-outlet>
-<!-- <app-footer>footer</app-footer> -->
+<!-- <mat-spinner></mat-spinner> -->
+<app-header>header</app-header>
+    <router-outlet></router-outlet>
+<app-footer>footer</app-footer>
 
