server folder and api integrated

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,44 +1,33 @@
-<!-- <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav
-     
-      class="sidenav"
-      fixedInViewport="true"
-      >
-      <mat-toolbar color="primary">Menu</mat-toolbar>
-      <mat-nav-list>
-        <a mat-list-item href="/first-page">First Page</a>
-        <a mat-list-item href="/second-page">Second Page</a>
-        <a mat-list-item href="/third-page">Third Page</a>
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <mat-toolbar color="primary">
-        <span>Application Title</span>
-      </mat-toolbar>
-      <router-outlet></router-outlet>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-  
-
-
-
-
-<button mat-button [routerLink]="['']">Home</button>
-<button mat-button [routerLink]="['/reports']">Report</button>
-<button mat-button [routerLink]="['/order-summary']">Order Summary</button>
-<button mat-button [routerLink]="['/sales-order']">Sales Order</button>
-<button mat-button [routerLink]="['/pricing']">Pricing</button>
-<button mat-button [routerLink]="['/admin']">Admin</button>
-<button mat-button [routerLink]="['/login']">Login</button> -->
-
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-  <span>My First App</span>
-      <span class="example-fill-remaining-space"></span>
-      <span class="align-center"></span>
-      <span class="example-spacer"></span>
-      <!-- <button mat-button>About</button>
-      <button mat-button>Contact</button> -->
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport="true"
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="!(isHandset$ | async)">
+    <mat-toolbar color="primary">Home</mat-toolbar>
+    <mat-nav-list>
+      <button mat-list-item mat-button [routerLink]="['']">Home</button>
+      <button mat-list-item mat-button [routerLink]="['/reports']">Report</button>
+      <button mat-list-item mat-button [routerLink]="['/order-summary']">Order Summary</button>
+      <button mat-list-item mat-button [routerLink]="['/sales-order']">Sales Order</button>
+      <button mat-list-item mat-button [routerLink]="['/pricing']">Pricing</button>
+      <button mat-list-item mat-button [routerLink]="['/admin']">Admin</button>
+      <button mat-list-item mat-button [routerLink]="['/login']">Login</button>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary ">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <!-- <span>Material-ng</span> -->
       <button mat-button [routerLink]="['']">Home</button>
 <button mat-button [routerLink]="['/reports']">Report</button>
 <button mat-button [routerLink]="['/order-summary']">Order Summary</button>
@@ -49,18 +38,8 @@
       <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>more_vert</mat-icon>
   </button>
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item>
-      <mat-icon>dialpad</mat-icon>
-      <span>Redial</span>
-    </button>
-    <button mat-menu-item disabled>
-      <mat-icon>voicemail</mat-icon>
-      <span>Check voicemail</span>
-    </button>
-    <button mat-menu-item>
-      <mat-icon>notifications_off</mat-icon>
-      <span>Disable alerts</span>
-    </button>
-  </mat-menu>
-   </mat-toolbar-row>
+    </mat-toolbar>
+    <!-- Add Content Here -->
+    
+  </mat-sidenav-content>
+</mat-sidenav-container>
