--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,63 +1,41 @@
-/* .example-card {
-    max-width: 420px;
-    margin:0 15px;
-    display: inline-table;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  } */
- 
-  mat-drawer.mat-drawer{
-    width: 300px;
-}
 
-mat-drawer-opened.mat-drawer-opened mat-drawer-content.mat-drawer-content
+.content-sidebar
 {
-  margin-left: 300px;
-  width: 100%;
-}
-  
-mat-drawer-content.mat-drawer-content
-{
-  margin-left: 1px;
-  width: 100%;
-}
-
-.mat-drawer-container
-{
-  height: 100%;
+  background: #fff;
+  padding: 50px 0px;
 }
 
 
-
-/* ------------------------------- */
-
-mat-grid-list.sidemenu-nav {
-  width: 100%;
-  display: inline-block;
+.mat-card {
+  background: #fff;
+  color: rgba(0,0,0,.87);
+  min-width: 300px;
+  text-align: center;
+  min-height: 150px;
 }
-.sidemenu-nav mat-grid-tile {
+
+mat-icon.mat-icon.material-icons {
+  font-size: 65px;
   display: inline-block;
   width: 100%;
+  height: inherit;
+  color: #01bceb;
 }
-.sidemenu-nav button.mat-button {
+
+.wrap-mat-card h3 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #01bceb;
+  margin-bottom: 0px;
+}
+
+mat-card.mat-card
+{
+  display: flex;
+  align-items: center;
+}
+
+.wrap-mat-card {
   width: 100%;
-  text-align: left;
-  line-height: 45px;
-  font-size: 16px;
-  color: #0d475d;
 }
-
-.sidemenu-nav button.active.mat-button {
-  background: #0d475d;
-  color: #fff;
-}
-
-
-
-
-
-
 
