--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,9 +6,9 @@
             <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>assessment</mat-icon><h3>Reports</h3></div></mat-card></mat-grid-tile>
             <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>shopping_basket</mat-icon><h3>Sales Order</h3></div></mat-card></mat-grid-tile>
             <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>monetization_on</mat-icon><h3>Pricing</h3></div></mat-card></mat-grid-tile>
-            <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>assessment</mat-icon><h3>Services</h3></div></mat-card></mat-grid-tile>
+            <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>layers</mat-icon><h3>Services</h3></div></mat-card></mat-grid-tile>
             <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>perm_contact_calendar</mat-icon><h3>Users Management</h3></div></mat-card></mat-grid-tile>
-            <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>assessment</mat-icon><h3>Assets Management</h3></div></mat-card></mat-grid-tile>
+            <mat-grid-tile><mat-card><div class="wrap-mat-card"><mat-icon>card_travel</mat-icon><h3>Assets Management</h3></div></mat-card></mat-grid-tile>
           </mat-grid-list>
 </div>
 
