--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,64 +1,62 @@
 <div class="login-bg">
   <div class="overlay">
-<mat-card class="half-card-block login-card">
-  <div class="logo-container">
-    <div class="logo-img-block">
-        <img src="../../assets/images/logo-blue.png" class="img-responsive logo-img">
+    <mat-card class="half-card-block login-card">
+      <div class="logo-container">
+        <div class="logo-img-block">
+          <img src="../../assets/images/logo-blue.png" class="img-responsive logo-img">
         </div>
         <p>Please enter your user informations</p>
       </div>
-  <!-- <mat-card-header>
+      <!-- <mat-card-header>
     <mat-card-title>Login</mat-card-title>
   </mat-card-header> -->
-  <mat-card-content>
-    <form class="card-form">
-  
-            <mat-form-field class="form-input-full">
+      <mat-card-content>
+        <form class="card-form">
+
+          <mat-form-field class="form-input-full">
             <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-            </mat-form-field>
-     
-       <mat-form-field class="form-input-full">
-          <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-        </mat-form-field>
+          </mat-form-field>
 
-<div class="sub-links">
+          <mat-form-field class="form-input-full">
+            <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+          </mat-form-field>
 
-<mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile class="left-title">   <mat-checkbox class="rem-me">Remember Me</mat-checkbox></mat-grid-tile>
-    <mat-grid-tile class="right-title">   
-      <a class="link-click" href="#">Forgot Password?</a>
-      <!-- <button mat-button class="fPass link-btns"><span class="md-accent">Forgot Password?</span></button> -->
-    </mat-grid-tile>
+          <div class="sub-links" [hidden]="signIn">
 
-  </mat-grid-list>
-</div>
-<mat-card-actions>
-  <button mat-raised-button (click)="login()" color="primary">Sign In</button>
-</mat-card-actions>
-  <div class="signupLink">Don't have an account? 
-    <!-- <button mat-button class="fPass">Click here to create one!</button> -->
-    <a class="link-click" href="#">Click here to create one!</a>
+            <mat-grid-list cols="2" rowHeight="2:1">
+              <mat-grid-tile class="left-title">
+                <mat-checkbox class="rem-me">Remember Me</mat-checkbox>
+              </mat-grid-tile>
+              <mat-grid-tile class="right-title">
+                <a class="link-click" href="#">Forgot Password?</a>
+                <!-- <button mat-button class="fPass link-btns"><span class="md-accent">Forgot Password?</span></button> -->
+              </mat-grid-tile>
+
+            </mat-grid-list>
+          </div>
+          <div [hidden]="signIn">
+            <mat-card-actions >
+              <button mat-raised-button (click)="login()" color="primary">Sign In</button>
+            </mat-card-actions>
+            <div class="signupLink">Don't have an account?
+              <!-- <button mat-button class="fPass">Click here to create one!</button> -->
+              <a class="link-click" [routerLink]="" (click)="toggel()">Click here to create one!</a>
+            </div>
+          </div>
+
+          <div [hidden]="signUp">
+            <mat-card-actions>
+              <button mat-raised-button (click)="signup()" color="primary">Sign Up</button>
+            </mat-card-actions>
+            <div class="signupLink">Want to go back?
+              <a class="link-click" [routerLink]="" (click)="toggel()">Click here to sign in</a>
+            </div>
+          </div>
+
+        </form>
+
+      </mat-card-content>
+
+    </mat-card>
   </div>
-</form>
-    
-  </mat-card-content>
-
-</mat-card>
 </div>
-</div>
-
-<!-- <div class="example-container">
-    <mat-form-field>
-      <input matInput placeholder="Input">
-    </mat-form-field>
-  
-    <mat-form-field>
-      <textarea matInput placeholder="Textarea"></textarea>
-    </mat-form-field>
-  
-    <mat-form-field>
-      <mat-select placeholder="Select">
-        <mat-option value="option">Option</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div> -->
