static sidebar, footer and dashboard cards

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,7 +1,12 @@
 <footer>
   <md-toolbar class="md-scroll-shrink">
     <div layout="row" layout-align="center center" flex>
-      FOOTER INFO
+    <div class="left-foot half-div">
+      <p>Pawered By : <a href="http://www.infinitylabs.in/" target="_blank"><img src="../../../assets/images/infinity-logo.png" class="foot-logo img-responsive" alt="Infinity Logo"></a></p>
+    </div>
+    <div class="right-foot half-div">
+      <p><mat-icon>copyright</mat-icon> 2019, All rights reserved.</p>
+    </div>
     </div>
   </md-toolbar>
 </footer>
