--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,8 @@ border-right: 2px solid #01bceb;
 {
     margin-left: 240px;
     padding: 20px 10px;
+    min-height: 550px;
+    background: #ffffff;
 }
 
 .side-menus button.mat-button {
@@ -84,12 +86,107 @@ border-right: 2px solid #01bceb;
 
 
 
-
-
-
-
-
-
-
-
 /* ----------------------- */
+
+
+/* ---- Sales Order ---- */
+
+.half-top-div {
+    /* background: #000; */
+    display: inline-block;
+    width: 50%;
+}
+
+.page-breadcrumb{
+    text-align: right;
+}
+
+span.bCrumbs {
+    font-size: 14px;
+    color: #01bceb;
+}
+
+.page-title{
+    font-size: 24px;
+    vertical-align: middle;
+    text-transform: uppercase;
+    line-height: initial;
+    color: #01bceb;
+}
+
+.mat-stepper-horizontal, .mat-stepper-vertical {
+    background-color: transparent;
+}
+
+.row-title {
+    margin-bottom: 30px;
+}
+
+
+.sales-order-data.content-slide {
+    padding: 0px 25px;
+}
+
+
+.mat-horizontal-content-container {
+    padding: 30px 0px 20px 0px!important;
+}
+
+.half-inputs .mat-form-field
+{
+    width: 50%;
+}
+.mat-form-field-wrapper
+{
+width: 90%;
+}
+
+
+
+
+.mat-horizontal-stepper-header-container {
+    background: #f7f7f7;
+    box-shadow: 0px 1px 5px 0px #d3d3d3;
+    border-radius: 4px;
+}
+
+/* -------------------------------------- */
+
+.float-left .mat-form-field-wrapper
+{
+    float: left;
+}
+
+.float-right .mat-form-field-wrapper
+{
+    float:right;
+}
+
+form.sales-forms .mat-form-field
+{
+    line-height: 20px;
+}
+
+.mat-btn-group {
+    margin-top: 30px;
+}
+
+.mat-flat-button.mat-primary {
+    background: #01bceb;
+    font-weight: 500;
+    font-size: 16px;
+    min-width: 150px;
+    height: 45px;
+}
+.mat-step-header .mat-step-icon
+{
+    background-color: #01bceb;
+}
+.mat-step-label.mat-step-label-active.mat-step-label-selected {
+    color: #01bceb;
+}
+
+.mat-step-header .mat-step-label.mat-step-label-active {
+    color: #9e9e9e;
+    font-size: 12px;
+}
